  * Find dialog (Ctrl+F) works again.
  * Improved focus shifting and handling.
  * Translation section visibility (collapse status) depends on 
    user's settings (dialog Options).
  * Added application icons. Icons from Tango project were used, SVG format.
  * Error page is displayed when user enters a word to the lookup
    panel and the word is not found.
convdict23:
  * Bugfix in evaluating templates uc: ucfirst: lc: lcfist:,
    fixes invalid trimming of result. Affects entry [[acaeciera]].
  * Finished implementation of expression parser: now the #expr
    supports also numbers as .123e4, functions exp, ln, abs, trunc, 
    floor, ceil, sin, cos, tan, asin, acos, atan, logical not, and, or,
    inequality operators <> and !=.
convdict34:
  * Generates form-of/gloss entries statistics.
  * Initial implementation of Category listings.

------------------------------------------------------------------------
Wikt 0.19.0 (released 2009-08-24)
------------------------------------------------------------------------
  * Source code was heavily refactored and simplified, which results 
    in significantly smaller source code line count.
  * Some parts of Wikt application were moved to separate CLI 
    programs. Dynamic shared library libwikt was created.
  * Memory usage of dictionary processing tools was decreased. 
    Several memory leaks were discovered and removed.
  * Unit tests were moved to separate applications outside of main 
    source code.
 
 Bugfixes
  * Tags <includeonly>, <onlyinclude>, and <noinclude> are detected 
    using regular expressions instead of fixed strings, 
    eg. old <includeonly>, new: <includeonly\s*>. Affects entry "apple".
  * Template evaluation fixed: {{Template:Appendix:Contents}} text 
    appeared in the entry [[Category:Appendices]]. Now it is handled 
    as {{Appendix:Contents}} in convdict23 pass because Appendix is 
    a valid namespace.
  
 New Features
  * Support of 2009-07-11 version of Wiktionary data.