@@ -1,3 +1,0 @@
-<includeonly>[[Category:Wikisaurus|{{PAGENAME}}]]</includeonly>
-
-
