@@ -1,0 +1,25 @@
+/* This file is part of Wikt.
+ *
+ * Wikt is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
+ *
+ * Wikt is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with Wikt. If not, see <http://www.gnu.org/licenses/>.
+ */
+#ifndef REFERENCES_H
+#define REFERENCES_H
+
+#include <QString>
+
+/// Searches for <ref> and <references/> tags and modifies them to 
+/// common wiki syntax. The returned string does not contain
+QString handleReferences(const QString &name, QString content);
+
+#endif // REFERENCES_H
