@@ -63,6 +63,14 @@ New Features
 
 <a href="news.html">Older news</a>
 
+<h2>Related projects</h2>
+<dl>
+<dt><a href="http://code.pediapress.com/wiki/wiki/mwlib">mwlib</a></dt>
+<dd>a Python library for parsing  MediaWiki articles</dd>
+<dt><a href="http://aarddict.org">Aard Dictionary</a></dt>
+<dd>multiplatform offline Wikipedia reader</dd>
+</dl>
+
 <hr/>
 Maintained by Karel Klíč.<br/>
 Hosted on <a href="http://sourceforge.net/">SourceForge.net</a>. See <a href="http://sf.net/projects/wikt">Wikt project page</a> on SourceForge.
